<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.note.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

  <EditText
      android:id="@+id/content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="9"
      android:hint="@string/content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:onClick="load"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:onClick="clear"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="delete"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>
</LinearLayout>
